--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 		</div>
 		<div class = "col-md-4 intro">
 			<h2>Introduction:</h2>
-			<p>This process book describes my team’s solution to our Info 360 course’s assignment. This assignment asked us to first find a solvable design problem on surviving college. As a result our team decided to tackle the problem of the student’s lack of knowledge of healthy dish recipes. 
+			<p>This process book describes my team’s solution to our Info 360 course’s assignment. This assignment asked us to first find a solvable design problem on surviving college. As a result our team decided to tackle the problem of the student’s lack of knowledge of healthy dish recipes. <br><br>
 
-			This book describes our group’s efforts to solve this problem. We will go in-depth on our dynamics, responsibilities and the actions that we took. My partners were Jenny Chen and Wesley Wolanski.
+			This book describes our group’s efforts to solve this problem. We will go in-depth on our dynamics, responsibilities and the actions that we took. My partners were Jenny Chen and Wesley Wolanski. <br><br>
 
-			The very first thing that this process book will talk about is our group’s first meeting. It will go into depth on our first conversations about out design problem.
+			The very first thing that this process book will talk about is our group’s first meeting. It will go into depth on our first conversations about out design problem. <br><br>
 			</p>
 		</div>		
 		<div class = "col-md-4">
@@ -68,13 +68,13 @@
 		</div>
 		<div class = "col-md-4 first">
 			<h2>First Meeting:</h2>
-			<p>We were given the task of finding a design problem under the context of surviving college in class. This was also during the time where we first met each other. While there was a little awkwardness, we worked together to find a problem.
+			<p>We were given the task of finding a design problem under the context of surviving college in class. This was also during the time where we first met each other. While there was a little awkwardness, we worked together to find a problem. <br><br>
 
-			We were brainstorming at a fast rate. I started throwing out ideas that college students typically face here. We said problems like money issues, time management, and meeting new people. Just when we tried to delve more deeply into these issues, our team brainstormed the issue of the freshmen 15.
+			We were brainstorming at a fast rate. I started throwing out ideas that college students typically face here. We said problems like money issues, time management, and meeting new people. Just when we tried to delve more deeply into these issues, our team brainstormed the issue of the freshmen 15. <br><br>
 
-			The freshmen 15 is a real problem that all of us saw or experienced. I lived in the dorms my freshmen year and saw it in person. We realized that the reason was that freshmen gain weight because they don’t know how to cook thus eats out constantly.
+			The freshmen 15 is a real problem that all of us saw or experienced. I lived in the dorms my freshmen year and saw it in person. We realized that the reason was that freshmen gain weight because they don’t know how to cook thus eats out constantly. <br><br>
 
-			We were excited about this problem, and decided to go with this. As a result, at the end of our first meeting we decided to use unhealthy eating habits as our design problem.
+			We were excited about this problem, and decided to go with this. As a result, at the end of our first meeting we decided to use unhealthy eating habits as our design problem. 
 			</p>
 		</div>		
 	</div> 
@@ -84,13 +84,13 @@
 	<div class = "row">
 		<div class = "col-md-4 brainstorm1">
 			<h2>Initial Brainstorming</h2>
-			<p>We were given the task of finding a design problem under the context of surviving college in class. This was also during the time where we first met each other. While there was a little awkwardness, we worked together to find a problem.
+			<p>We were given the task of finding a design problem under the context of surviving college in class. This was also during the time where we first met each other. While there was a little awkwardness, we worked together to find a problem. <br><br>
 
-			We were brainstorming at a fast rate. I started throwing out ideas that college students typically face here. We said problems like money issues, time management, and meeting new people. Just when we tried to delve more deeply into these issues, our team brainstormed the issue of the freshmen 15.
+			We were brainstorming at a fast rate. I started throwing out ideas that college students typically face here. We said problems like money issues, time management, and meeting new people. Just when we tried to delve more deeply into these issues, our team brainstormed the issue of the freshmen 15. <br><br>
 
-			The freshmen 15 is a real problem that all of us saw or experienced. I lived in the dorms my freshmen year and saw it in person. We realized that the reason was that freshmen gain weight because they don’t know how to cook thus eats out constantly.
+			The freshmen 15 is a real problem that all of us saw or experienced. I lived in the dorms my freshmen year and saw it in person. We realized that the reason was that freshmen gain weight because they don’t know how to cook thus eats out constantly. <br><br>
 
-			We were excited about this problem, and decided to go with this. As a result, at the end of our first meeting we decided to use unhealthy eating habits as our design problem.
+			We were excited about this problem, and decided to go with this. As a result, at the end of our first meeting we decided to use unhealthy eating habits as our design problem. <br><br>
 			</p>
 		</div>		
 		<div class = "col-md-8">
@@ -106,11 +106,11 @@
 		</div>	
 		<div class = "col-md-4 stickyNotes">
 			<h2>Brainstorming: Sticky Notes</h2>
-			<p>In lab we were given the task of brainstorming possible solutions to this design problem. Our design problem was the unhealthy eating habits of students. These solutions were put on sticky notes.
+			<p>In lab we were given the task of brainstorming possible solutions to this design problem. Our design problem was the unhealthy eating habits of students. These solutions were put on sticky notes. <br><br>
 
-			We brainstormed ideas such as songs on healthy information, news regarding nutrition, picture book of healthy dishes, history of what we ate, and a multitude of other ideas.
+			We brainstormed ideas such as songs on healthy information, news regarding nutrition, picture book of healthy dishes, history of what we ate, and a multitude of other ideas. <br><br>
 
-			After I wrote down all of our group’s ideas on the post it notes, we grouped them together. The organization of this was in terms of what ideas we thought were best.
+			After I wrote down all of our group’s ideas on the post it notes, we grouped them together. The organization of this was in terms of what ideas we thought were best. <br><br>
 
 			At this point, I began to think that this was a huge problem. I felt a little overwhelmed and wanted more information so that we can have a more concrete way of approaching this problem.
 
@@ -124,13 +124,13 @@
 	<div class = "row">
 		<div class = "col-md-4 initialInterviews">
 			<h2>Gathering Information: Interviews</h2>
-			<p>Now that we have found our design problem, we have to find out more information about it. As a result, we decided to interview other students!
+			<p>Now that we have found our design problem, we have to find out more information about it. As a result, we decided to interview other students! <br><br>
 
-			When I first looked at this assignment I was worried. As I still didn’t know that many people, and more importantly I didn’t know whom to interview. I thought that our target audience was freshmen, but we changed it to college students in general as this problem affects everyone.
+			When I first looked at this assignment I was worried. As I still didn’t know that many people, and more importantly I didn’t know whom to interview. I thought that our target audience was freshmen, but we changed it to college students in general as this problem affects everyone. <br><br>
 
-			The two people I interviewed was Ria Hu and Vivian Teng. I asked a variety of questions about my problem of college student’s unhealthy eating habits. I found out that there were a variety of reasons for their eating habits. 
+			The two people I interviewed was Ria Hu and Vivian Teng. I asked a variety of questions about my problem of college student’s unhealthy eating habits. I found out that there were a variety of reasons for their eating habits. <br><br>
 
-			Both now live on campus as a result were our target audience. They told me that their parents mainly cooked for them at home, and now at college they don’t really know that many dishes. They do eat-out depending on factors like money, time, and convenience.
+			Both now live on campus as a result were our target audience. They told me that their parents mainly cooked for them at home, and now at college they don’t really know that many dishes. They do eat-out depending on factors like money, time, and convenience. <br><br>
 
 			At the end of this interview I found several reasons why students have unhealthy eating habits. The reasons being lack of knowledge of dish recipes, time, money, and convenience.
 
@@ -152,7 +152,7 @@
 	<div class = "row">
 		<div class = "col-md-4 teamCommunication">
 			<h2>Team Communication</h2>
-			<p>Now that we had assignments, we needed a medium to communicate in. Since we can’t work together in person all the time, we set up a Facebook group where we can communicate with one another. 
+			<p>Now that we had assignments, we needed a medium to communicate in. Since we can’t work together in person all the time, we set up a Facebook group where we can communicate with one another. <br><br> 
 
 			Inside this group we used the message function to ask questions with one another and post google docs. Inside these google docs we wrote our homework assignments together. This was very helpful to me as I am busy often, and as a result can be unavailable to meet up in person. Yet with this technology I am able to contribute to the design process anywhere.
 
@@ -168,15 +168,15 @@
 	<div class = "row">
 		<div class = "col-md-4">
 			<h2>Ideation: 40 Ideas</h2>
-			<p>Now that we have some ideas of what are the reasons behind unhealthy eating, we need to find prototypes that encompass these reasons. The task was to come up with 40 ideas to solve this problem.
+			<p>Now that we have some ideas of what are the reasons behind unhealthy eating, we need to find prototypes that encompass these reasons. The task was to come up with 40 ideas to solve this problem. <br><br>
 
-			It was at first difficult to come up with these ideas as I was drawing a blank without some help. As a result I searched on google on solutions to unhealthy eating habits. I found a great deal of results from both the technology and non-technology applications.
+			It was at first difficult to come up with these ideas as I was drawing a blank without some help. As a result I searched on google on solutions to unhealthy eating habits. I found a great deal of results from both the technology and non-technology applications. <br><br>
 
-			In the technology applications I found there were many apps that solve this issue. These apps solved this problem by using knowledge, money, time, distance, and other factors. For example, one app took a picture of an item which then revealed all the information pertaining to it like calorie amount. Another was a website where users uploaded pictures to a website where others rated the dish.
+			In the technology applications I found there were many apps that solve this issue. These apps solved this problem by using knowledge, money, time, distance, and other factors. For example, one app took a picture of an item which then revealed all the information pertaining to it like calorie amount. Another was a website where users uploaded pictures to a website where others rated the dish. <br><br>
 
-			In the non-technological application there were results of real life help. There was advice like eating with other people or maintaining a set schedule. Also just eating healthy food like fruits and vegetable more often.
+			In the non-technological application there were results of real life help. There was advice like eating with other people or maintaining a set schedule. Also just eating healthy food like fruits and vegetable more often. <br><br>
 
-			The difficult part was coming up with 20 original ideas. I came up with ideas that were similar to these ones. The original ideas that I did create were ridiculous like drinking water all day. 
+			The difficult part was coming up with 20 original ideas. I came up with ideas that were similar to these ones. The original ideas that I did create were ridiculous like drinking water all day.  <br><br>
 
 			At the end I found ideas on google that I liked. I liked certain themes and aspects and wanted to implement them in my prototype.
 
@@ -184,7 +184,8 @@
 			</p>
 		</div>		
 		<div class = "col-md-8">
-			<img src="images/40ideas.png" width="200" height="200">
+			<img src="images/40ideas1.jpg" width="400" height="400">
+			<img src="images/40ideas2.jpg"width="400" height="400">
 		</div>
 	</div> 
 </section>
@@ -213,28 +214,36 @@
 	<div class = "row">
 		<div class = "col-md-4">
 			<h2>Low-Fidelity Prototype</h2>
-			<p>In this assignment I had to test these prototypes with two users. The users that tested my prototype were Oscar Wong and James Prow. I prepared various tasks for the users to perform in order to see if the prototype can truly solve these issues.
+			<p>In this assignment I had to test these prototypes with two users. The users that tested my prototype were Oscar Wong and James Prow. I prepared various tasks for the users to perform in order to see if the prototype can truly solve these issues. <br><br>
 
-			Oscar and James generally performed the tasks fairly quickly for my prototype that dealt with user feedback. For example, when search for new recipes they found it easily. They also understood how to upload their own recipe easily as well. The main issues were the confusing layout and the meanings of various features. There were problems like confusion on how to message a user as the layout was confusing. 
+			Oscar and James generally performed the tasks fairly quickly for my prototype that dealt with user feedback. For example, when search for new recipes they found it easily. They also understood how to upload their own recipe easily as well. The main issues were the confusing layout and the meanings of various features. There were problems like confusion on how to message a user as the layout was confusing. <br><br>
 
 			Next I tested the take a picture prototype. Which led to an immediate problem as they didn’t know how to start. The issue was that there was no home screen, as it was defaulted to the picture screen. But once they started they completed all the tasks quickly and found the information about the dishes interesting.
 
-			Last, I tested the money budget prototype. Both users completed the tasks easily, but Oscar did have a little trouble getting started. There were features that weren’t obvious to the user, such as the filter option.
-
-			All in all, I learned that whichever prototype we choose needs to be simple and have all the features be obvious. There is no point in adding features if the users don’t notice or know how to use them. However I thought that the user feedback prototype would be the most interesting as I thought most people would use it often as it is a social website.
-
-
 			</p>
 		</div>		
-		<div class = "col-md-8">
+		<div class = "col-md-5">
 			<img src="images/budgetApp.png" width="300" height="300">
 			<img src="images/dawgFoods.png" width="300" height="300">
 		</div>
+		<div class= "col-md-3">
+			<p>
+			
+
+			Last, I tested the money budget prototype. Both users completed the tasks easily, but Oscar did have a little trouble getting started. There were features that weren’t obvious to the user, such as the filter option. <br>
+
+			All in all, I learned that whichever prototype we choose needs to be simple and have all the features be obvious. There is no point in adding features if the users don’t notice or know how to use them. However I thought that the user feedback prototype would be the most interesting as I thought most people would use it often as it is a social website.</p>
+		</div>
+
 	</div> 
 </section>
 
 <section id="changePrototype" data-speed="10" data-type="background">
 	<div class = "row">
+		<div class = "col-md-5">
+			<img src="images/dawgPrototype.png" width="400" height="600">
+		</div>
+		<div class="col-md-3"></div>
 		<div class = "col-md-4">
 			<h2>Group Meeting: Scenarios and Changing the Prototype</h2>
 			<p>In this meeting we discussed the results of our findings as well as make scenarios for our prototypes. At this meeting we had to choose one prototype of the 3 for our homework. We decided to use my prototype: the user feedback prototype. 
@@ -247,9 +256,7 @@
 
 			</p>
 		</div>		
-		<div class = "col-md-8">
-			<img src="images/dawgPrototype.png" width="600" height="600">
-		</div>
+		
 	</div> 
 </section>
 
@@ -263,7 +270,7 @@
 
 			</p>
 		</div>		
-		<div class-"col-md-8">
+		<div class="col-md-8 scriptBack">
 			1) Can you tell me what you see on the page?<br>
 			2) Can you tell me what group the people on the feed are a part of?<br>
 			3) If you wanted to dislike a food for being unhealthy, how would you do it?<br>
