--- a/index.html
+++ b/index.html
@@ -404,6 +404,30 @@
 	</div> 
 </section>
 
+<section id="conclusion" data-speed="10" data-type="background">
+	<div class = "row">
+		<div class-"col-md-4 noBackground">
+
+		</div>
+		<div class = "col-md-4">
+			<h2>Conclusion</h2>
+			<p> Now I took all the information that we learned from this design process and applied it to the 
+				final product. Buxton's definition of design is the use of creativity to generate meaningful ideas, in which from there one compromises with oneself or the group to choose the best option (Buxton 145-9). <br><br>
+
+				I believe I can support his definition of design through my experiences here in this project. I and my group had to make many compromises in order to choose the best option for the problem statement. This involved a lot of prototyping and feedback from our peers and instructors. <br><br>
+
+				This process is where I will feel regret. I regret not starting on the process early enough, as a group we ended up with a lot of issues later in the quarter. If we started earlier we would have found a solid problem statement earlier, which would have made our work better. <br><br>
+
+				In the end though, this process has taught me a lot about life, not just design. I learned that I need to take initiative else there is no guarantee of anything getting done. I beleive that DawgFoods.com could potentially be a successful product, if we put more time into it. It has all the necessary components, being geared towards a profitable market, to be succesful.
+
+			</p>
+		</div>		
+		<div class-"col-md-4 noBackground">
+
+		</div>
+	</div> 
+</section>
+
 <!-- JS Code -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script src="js/script.js"></script>
