--- a/index.html
+++ b/index.html
@@ -122,32 +122,31 @@
 
 <section id="interviews" data-speed="10" data-type="background">
 	<div class = "row">
-		<div class = "col-md-4">
+		<div class = "col-md-8 first">
 			<h2>Gathering Information: Interviews</h2>
 			<p>Now that we have found our design problem, we have to find out more information about it. As a result, we decided to interview other students! <br><br>
 
 			When I first looked at this assignment I was worried. As I still didn’t know that many people, and more importantly I didn’t know whom to interview. I thought that our target audience was freshmen, but we changed it to college students in general as this problem affects everyone. <br><br>
+
+			The two people I interviewed was Ria Hu and Vivian Teng. I asked a variety of questions about my problem of college student’s unhealthy eating habits. I found out that there were a variety of reasons for their eating habits. <br><br>
+
+			Both now live on campus as a result were our target audience. They told me that their parents mainly cooked for them at home, and now at college they don’t really know that many dishes. They do eat-out depending on factors like money, time, and convenience. <br><br>
+
+			At the end of this interview I found several reasons why students have unhealthy eating habits. The reasons being lack of knowledge of dish recipes, time, money, and convenience.
 			</p>
-		</div>		
+		</div>
 		<div class="col-md-4 noBackground">
-			<h1>Listen to Interviews</h1>
+				<h1>Listen to Interviews</h1>
 			<audio controls>
 			  <source src="VivianInterview.mp3" type="audio/mpeg">
 			  <source src="VivianInterview.ogg" type="audio/ogg">
 			  <embed height="50" width="50" src="VivianInterview.mp3">
 			</audio> 
-		</div>
-		<div class= "col-md-4">
-			<p>The two people I interviewed was Ria Hu and Vivian Teng. I asked a variety of questions about my problem of college student’s unhealthy eating habits. I found out that there were a variety of reasons for their eating habits. <br><br>
-
-			Both now live on campus as a result were our target audience. They told me that their parents mainly cooked for them at home, and now at college they don’t really know that many dishes. They do eat-out depending on factors like money, time, and convenience. <br><br>
-
-			At the end of this interview I found several reasons why students have unhealthy eating habits. The reasons being lack of knowledge of dish recipes, time, money, and convenience.</p>
-		</div>
+		</div>		
 	</div> 
-
-	
 </section>
+
+
 
 <section id="communication" data-speed="10" data-type="background">
 	<div class = "row">
