--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
 <section id="home" data-speed="10" data-type="background">
 	<div class = "row">
 		<div class = "col-md-4">
-			<h1>Process Book</h1>
-			<h2>By Kevin Yang</h2>
 		</div>
 		<div class = "col-md-4 intro">
 			<h2>Introduction:</h2>
@@ -27,7 +25,7 @@
 
 			This book describes our group’s efforts to solve this problem. We will go in-depth on our dynamics, responsibilities and the actions that we took. My partners were Jenny Chen and Wesley Wolanski. <br><br>
 
-			Join me in a journey from Paccar hall to where ever this road of design leads us. In the end of this road lies the solution to this design problem.  <br><br>
+			The very first thing that this process book will talk about is our group’s first meeting. It will go into depth on our first conversations about out design problem. <br><br>
 			</p>
 		</div>		
 		<div class = "col-md-4">
@@ -42,7 +40,7 @@
  <nav>
     <ul>
     	<li><a href="#firstMeeting">The First Meeting</a></li>
-    	<li><a href="#sticky">Group:Brainstorming with Sticky Notes</a></li>
+    	<li><a href="#sticky">Group:Brainstorming with sticky notes</a></li>
     	<li><a href="#interviews">Initial Interviews</a></li>
     	<li><a href="#communication">Group: How do we communicate?</a></li>
     	<li><a href="#ideas">Ideation: 40 Ideas</a></li>
@@ -50,13 +48,14 @@
     	<li><a href="#lowPrototype">Low Fidelity Prototype</a></li>
     	<li><a href="#changePrototype">Choosing a Prototype</a></li>
     	<li><a href="#test2">Testing the Prototype</a></li>
-    	<li><a href="#spec1">Why is our site like this?</a></li>
+    	<li><a href="#spec1">Why is our Site like this?</a></li>
     	<li><a href="#groupChange">Worried Thoughts</a></li>
     	<li><a href="#spec2">Confirmation of Problems</a></li>
     	<li><a href="#video1">Change of Plans</a></li>
     	<li><a href="#finalFeedback">Final Feedback</a></li>
     	<li><a href="#conclusion">Conclusion</a></li>
     </ul>
+            
 </nav>
 </div>
  
@@ -69,14 +68,14 @@
 			<img src="images/brainstorm.png" width="800" height="700">
 		</div>
 		<div class = "col-md-4 first">
-			<h2>The First Meeting</h2>
+			<h2>First Meeting:</h2>
 			<p>We were given the task of finding a design problem under the context of surviving college in class. This was also during the time where we first met each other. While there was a little awkwardness, we worked together to find a problem. <br><br>
 
 			We were brainstorming at a fast rate. I started throwing out ideas that college students typically face here. We said problems like money issues, time management, and meeting new people. Just when we tried to delve more deeply into these issues, our team brainstormed the issue of the freshmen 15. <br><br>
 
 			The freshmen 15 is a real problem that all of us saw or experienced. I lived in the dorms my freshmen year and saw it in person. We realized that the reason was that freshmen gain weight because they don’t know how to cook thus eats out constantly. <br><br>
 
-			As a result we decided to explore this problem of unhealthy eating.
+			We were excited about this problem, and decided to go with this. As a result, at the end of our first meeting we decided to use unhealthy eating habits as our design problem. 
 			</p>
 		</div>		
 	</div> 
@@ -88,7 +87,7 @@
 			<img src="images/postIts.png" height="800" width="800">
 		</div>	
 		<div class = "col-md-4 stickyNotes">
-			<h2>Group:Brainstorming with Sticky Notes</h2>
+			<h2>Brainstorming: Sticky Notes</h2>
 			<p>In lab we were given the task of brainstorming possible solutions to this design problem. Our design problem was the unhealthy eating habits of students. We then put these ideas on sticky notes <br><br>
 
 			We brainstormed ideas such as songs on healthy information, news regarding nutrition, picture book of healthy dishes, history of what we ate, and a multitude of other ideas. <br><br>
@@ -106,7 +105,7 @@
 <section id="interviews" data-speed="10" data-type="background">
 	<div class = "row">
 		<div class = "col-md-8 first">
-			<h2>Initial Interviews</h2>
+			<h2>Gathering Information: Interviews</h2>
 			<p>Thankfully, I was given the opportunity to gather more information about this design problem. I was given the task to interview two classmates about our design problem. <br><br>
 
 			When I first looked at this assignment I was worried. As I still didn’t know that many people, and more importantly I didn’t know whom to interview. I thought that our target audience was freshmen, but we changed it to college students in general as this problem affects everyone. <br><br>
@@ -132,7 +131,7 @@
 <section id="communication" data-speed="10" data-type="background">
 	<div class = "row">
 		<div class = "col-md-4 teamCommunication">
-			<h2>Group: How do we communicate?</h2>
+			<h2>Team Communication</h2>
 			<p>After getting more information about our problem space, we were given an assignment to ideate possible solutions as a group. As a result, we needed a method to communicate since we can’t work together in person all the time. Thus we set up a Facebook group where we can communicate with one another. <br><br> 
 
 			Inside this group we used the message function to ask questions with one another and post google docs.Inside these google docs we wrote our homework assignments together. This was very helpful to me as I am busy often, and as a result can be unavailable to meet up in person. Yet with this technology I was able to contribute to the design process anywhere.
@@ -174,8 +173,7 @@
 
 <section id="makePrototype" data-speed="10" data-type="background">
 	<div class = "row">
-		<div class="col-md-2"></div>
-		<div class = "col-md-6 first">
+		<div class = "col-md-8 first">
 			<h2>Group: Making the Prototype</h2>
 			<p>As a group we each came up with 40 ideas that solved our problem space. But making a prototype for each one would be impossible, so we decided to pick the top 3 ideas. <br><br>
 
@@ -186,32 +184,32 @@
 			I decided to choose the rate a dish app. Wesley chose the money budget and Jenny chose the take a picture app. When making the prototype I decided to try to make it solve all the issues. I included various features that solved the money issue, time, and lack of knowledge. I didn't know what specific problem to focus on and as a result I just tried to solve all of them. That decision created many difficulties later on.</p>
 		</div>		
 		<div class = "col-md-4 images noBackground">
-			<img src="images/Prototyping.png" width="200" height="400">
+			<img src="images/prototyping.png" width="200" height="400">
 		</div>
 	</div> 
 </section>
 
 <section id="lowPrototype" data-speed="10" data-type="background">
 	<div class = "row">
-		<div class= "col-md-2">
-		</div>
 		<div class = "col-md-4">
 			<h2>Low-Fidelity Prototype</h2>
 			<p>In this assignment I had to test these prototypes with two users. The users that tested my prototype were Oscar Wong and James Prow. I prepared various tasks for the users to perform in order to see if the prototype can truly solve these issues. <br><br>
 
 			Oscar and James generally performed the tasks fairly quickly for my prototype that dealt with user feedback, which I titled DawgFoods.com. For example, when search for new recipes they found it easily. They also understood how to upload their own recipe easily as well. The main issues were the confusing layout and the meanings of various features. There were problems like confusion on how to message a user as the layout was confusing. <br><br>
 
-			Next I tested the take a picture prototype. Which led to an immediate problem as they didn’t know how to start. The issue was that there was no home screen, as it was defaulted to the picture screen. But once they started they completed all the tasks quickly and found the information about the dishes interesting. <br> <br>
+			Next I tested the take a picture prototype. Which led to an immediate problem as they didn’t know how to start. The issue was that there was no home screen, as it was defaulted to the picture screen. But once they started they completed all the tasks quickly and found the information about the dishes interesting.
 
-			Last, I tested the money budget prototype. Both users completed the tasks easily, but Oscar did have a little trouble getting started. There were features that weren’t obvious to the user, such as the filter option. <br><br>
-
-			All in all, I learned that whichever prototype we choose needs to be simple and have all the features be obvious. There is no point in adding features if the users don’t notice or know how to use them. Such as was the case when Oscar and James didn't know how to message a user in the Dawgfoods website. However I thought that the user feedback prototype would be the most interesting as I thought most people would use it often as it is a social website.</p>
+			</p>
 		</div>		
-		<div class = "col-md-4 images noBackground">
+		<div class = "col-md-5 images">
 			<img src="images/budgetApp.png" width="300" height="300"> <br>
 			<img src="images/dawgFoods.png" width="300" height="300">
 		</div>
-		<div class= "col-md-2">
+		<div class= "col-md-3">
+			<p>
+			Last, I tested the money budget prototype. Both users completed the tasks easily, but Oscar did have a little trouble getting started. There were features that weren’t obvious to the user, such as the filter option. <br><br>
+
+			All in all, I learned that whichever prototype we choose needs to be simple and have all the features be obvious. There is no point in adding features if the users don’t notice or know how to use them. Such as was the case when Oscar and James didn't know how to message a user in the Dawgfoods website. However I thought that the user feedback prototype would be the most interesting as I thought most people would use it often as it is a social website.</p>
 		</div>
 
 	</div> 
@@ -239,7 +237,7 @@
 <section id="test2" data-speed="10" data-type="background">
 	<div class = "row">
 		<div class = "col-md-4">
-			<h2>Testing the Prototype</h2>
+			<h2>Testing the improved version</h2>
 			<p>The time finally came to put this prototype in action. I tested DawgFoods.com with Oscar Wong and James Prow again. I listened to their feedback and made the design simpler and easier to use. <br><br>
 
 			In the newly prepared tasks I asked them to do, both completed them with little difficulty. However with little difficulty there were a few problems. While I did correct the errors in the first iteration like the message function, there were problems in the new features. I added the task of liking a dish in order to help make the healthiness of a dish clearer to a user. Both had problems with completing this task as the button was not intuitive, an up button. There were additional issues like the layout. There was too much information presented on the screen thus some features didn’t grab the attention of the user. <br><br>
@@ -286,7 +284,7 @@
 	<div class = "row">
 		<div class = "col-md-2"></div>
 		<div class = "col-md-4">
-			<h2>Worried Thoughts</h2>
+			<h2>Worried thoughts</h2>
 			<p>This took place in class and the activity was to critique the visual of our prototypes. We found that there were various problems with the website. <br><br>
 
 			I brought up the problem of confusing layout, and unclear purpose of certain features like the like button. As a result we decided to change a lot of things in our site. We decided to have a simpler layout in order to make the functionality of the site easier. We decided to get rid of some stuff like the picture icon, chat bubbles, and etc. We wanted to keep that theme throughout the whole web page. As a result we needed to keep features consistent throughout the site. For example the sizes of the images should be the same and the buttons used for the same features should be the same. <br><br>
@@ -305,7 +303,7 @@
 <section id="spec2" data-speed="10" data-type="background">
 	<div class = "row">
 		<div class = "col-md-4">
-			<h2>Confirmation of Problems</h2>
+			<h2>Confirmation of problems</h2>
 			<p>We had now received feedback from our TA on the spec. He then confirmed my suspicions that our problem statement needs work and subsequently our scope. <br><br>
 
 			I then feeling worried pitched some problem statements to our TA and professor. I linked the problem to that students have difficulty gaining motivation to eat healthy. They said it could work if worded correctly. I found it interesting that they told me that the problem should be solvable. It should be introduced in a way that the reader naturally lands on the same conclusion, that it is a problem. <br><br>
@@ -331,7 +329,7 @@
 	<div class = "row">
 		<div class="col-md-2"></div>
 		<div class = "col-md-4">
-			<h2>Change of Plans</h2>
+			<h2>Resolving issues</h2>
 			<p>In this class were assigned a video to showcase our prototype. In this assignment I looked at our storyboard and found a problem with out problem statement. In the video we were acting out a normal usage of the site, but how would one show a user being motivated to using the site? <br> <br>
 
 			As a result I thought this problem statement was faulty and thought a new one was in order. I told my partners that we should come up with a new one, and we decided to use the lack of knowledge on healthy dishes as our problem. This was perfect as it was the problem that all users that would use this site have, as they go onto this site to learn a dish. <br><br>
@@ -370,11 +368,10 @@
 
 <section id="conclusion" data-speed="10" data-type="background">
 	<div class = "row">
-		<div class="col-md-1"></div>
 		<div class="col-md-4 noBackground">
 			<img src="images/finalDawgFoods.png" height="600" width="600">
 		</div>
-		<div class="col-md-1"></div>
+		<div class="col-md-2"></div>
 		<div class = "col-md-4">
 			<h2>Conclusion</h2>
 			<p> Now I took all the information that we learned from this design process and applied it to the 
@@ -388,7 +385,7 @@
 
 			</p>
 		</div>		
-		<div class="col-md-2"></div>
+
 	</div> 
 </section>
 
